--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sequelize": "^6.37.0"
   }
 }
