--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
+    "fs": "0.0.1-security",
     "fs.promises": "^0.1.2",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mathjs": "^11.11.1",
     "moment": "^2.29.4",
