--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.cjs",
   "scripts": {
-    "start": "nodemon index.cjs",
+    "start": "nodemon app.cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
