--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "swagger": "node swagger.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -40,7 +41,11 @@
     "objection": "^3.1.4",
     "request": "^2.88.2",
     "rotating-file-stream": "^3.2.1",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.12.0",
     "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7"
   }
 }
